--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 @font-face{
+    src:url(./fonts/BGizzle.ttf);
     font-family: "BGizzle";
-    src:url(/fonts/BGizzle.ttf);
     font-style: normal;
     font-weight: normal;
 }
@@ -22,19 +22,38 @@ body {
 
 .group .header {
     margin: 5px 10px;
-
 }
 
 .group .card {
     margin: 10px;
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     background: white;
 }
-
-
 
 .group .footer {
     margin: 5px 10px;
     opacity: 0.5;
+}
+
+.card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+}
+
+.card-footer {
+    display: flex;
+    justify-content: space-around;
+    bottom: 0;
+}
+
+.card-status {
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: black;
+   
 }
