--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,1 @@
-body {
-    background: blue;
-}
-
-@font-face{
-    src:url(./fonts/BGizzle.ttf);
-    font-family: "BGizzle";
-    font-style: normal;
-    font-weight: normal;
-}
-
-.content{
-    display: flex;
-}
-
-.group {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    background: yellow
-}
-
-.group .header {
-    margin: 5px 10px;
-}
-
-.group .card {
-    margin: 10px;
-    width: 300px;
-    height: 150px;
-    background: white;
-}
-
-.group .footer {
-    margin: 5px 10px;
-    opacity: 0.5;
-}
-
-.card-header {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-}
-
-.card-footer {
-    display: flex;
-    justify-content: space-around;
-    bottom: 0;
-}
-
-.card-status {
-    display: block;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background: black;
-   
-}
+body{background:blue}@font-face{src:url(./fonts/BGizzle.ttf);font-family:"BGizzle";font-style:normal;font-weight:normal}.content{display:flex}.group{display:flex;flex-direction:column;margin:10px;background:yellow}.group .header{margin:5px 10px}.group .card{margin:10px;width:300px;height:150px;background:white}.group .footer{margin:5px 10px;opacity:0.5}.card-header{display:flex;flex-direction:column;align-items:flex-start;justify-content:space-around}.card-footer{display:flex;justify-content:space-around;bottom:0}.card-status{display:block;width:15px;height:15px;border-radius:50%;background:black}
