--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,13 +3,14 @@ body {
 }
 
 @font-face{
-    src:url(./fonts/BGizzle.ttf);
     font-family: "BGizzle";
+    src: local(BGizzle) url(./fonts/BGizzle.ttf) format('truetype');
     font-style: normal;
     font-weight: normal;
 }
 
 .content{
+    font-family: BGizzle;
     display: flex;
 }
 
@@ -17,30 +18,27 @@ body {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    background: yellow;
-    
-    .header {
-        margin: 5px 10px;
-    }  
-    
-    .card {
-        margin: 10px;
-        width: 300px;
-        height: 150px;
-        background: white;
-    }
+    background: yellow; 
+}
 
-    .footer {
-        margin: 5px 10px;
-        opacity: 0.5;
-    }
+.header {
+    margin: 5px 10px;
+}     
+
+.footer {
+    margin: 5px 10px;
+    opacity: 0.5;
+}
+.card {
+    margin: 10px;
+    width: 300px;
+    height: 150px;
+    background: white;
 }
 
 .card-header {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .card-footer {
