--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,9 @@ body {
     display: flex;
 }
 
-.group {
+.group,
+.group-1,
+.group-2 {
     display: flex;
     flex-direction: column;
     margin: 10px;
